@@ -268,7 +268,7 @@ public class CfMapUpdater
 
         /** {@inheritDoc} */
         @Override
-        public void connectFailed()
+        public void connectFailed(final String reason)
         {
             // ignore
         }
