@@ -177,14 +177,14 @@ public class DefaultScriptProcess extends Thread implements ScriptProcess
 
         /** {@inheritDoc} */
         @Override
-        public void disconnecting()
+        public void disconnecting(final String reason)
         {
             // ignore
         }
 
         /** {@inheritDoc} */
         @Override
-        public void disconnected()
+        public void disconnected(final String reason)
         {
             // ignore
         }
