@@ -302,7 +302,7 @@ public class Stats
 
         /** {@inheritDoc} */
         @Override
-        public void connectFailed()
+        public void connectFailed(final String reason)
         {
             // ignore
         }
